# gapid

./: .gitignore  BUILD.bazel
cmd/gapir/cc/: gapir.exports  main.cpp
cmd/gapit/: BUILD.bazel  common.go  flags.go  replace_resource.go
cmd/gofuse/: main.go
core/app/layout/: layout.go
core/os/process/: client.go
core/os/shell/: command.go
core/vulkan/loader/: loader.go
core/vulkan/vk_advance_portability_layer/apk/: BUILD.bazel
core/vulkan/vk_advance_portability_layer/cc/: BUILD.bazel  VkLayer_advance_portability.json  advance_portability_layer.tmpl  advance_portability_layer_android.exports  advance_portability_layer_desktop.exports  advance_portability_layer_impl.cpp  advance_portability_layer_structs.h
core/vulkan/vk_virtual_swapchain/cc/: virtual_swapchain.cpp  virtual_swapchain.h  virtual_swapchain_android.exports  virtual_swapchain_desktop.exports
gapidapk/android/apk/: BUILD.bazel
gapii/client/: adb.go
gapil/compiler/plugins/cloner/test/: BUILD.bazel  cloner.api  cloner_test.go  shims.go
gapir/cc/: BUILD.bazel
gapis/api/gles/: BUILD.bazel  externs.go
gapis/api/gvr/: BUILD.bazel
gapis/api/templates/: api.go.tmpl  go_common.tmpl  mutate.go.tmpl  vulkan_gfx_api_extras.tmpl
gapis/api/test/: BUILD.bazel  convert_test.go
gapis/api/vulkan/: BUILD.bazel  externs.go  replay.go
gapis/api/vulkan/templates/: vulkan_layer.tmpl
test/integration/gles/replay/: BUILD.bazel
test/integration/replay/: BUILD.bazel
